# pybind_example

./: CMakeLists.txt  Dockerfile  README.md  build.bat  pyproject.toml  run_container.bat  setup.py
src/: main.cpp
